# explore-G4

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md  compile-time-safety.cc  compile-time-safety.rs  compositejob.py  default.nix  derivation.nix  fitxenon.py  flake.nix  jaszczak.py  justfile  main.cc  release.nix  shell.nix  typestate.cc
.github/workflows/: install-via-nix-and-test.yml
abracadabra/: CMakeLists.txt  abracadabra.cc  catch2-main-test.cc  init_vis.mac  model.mac  run1.mac  run2.mac  testy-westy.cc  vis.mac
abracadabra/include/: action_initialization.hh  detector_construction.hh  event_action.hh  geometries.hh  nain4.hh  primary_generator_action.hh  run_action.hh  trivial.hh
abracadabra/include/geometries/: imas.hh
abracadabra/macs/: abracadabra.in  density-map-run.mac  init_vis.mac  model.mac  nema3-model.mac  nema3-run.mac  nema4-model.mac  nema4-run.mac  nema7-model.mac  nema7-run.mac  run.mac  trial-run.mac  vis.mac
abracadabra/nain4/: CMakeLists.txt  g4-mandatory.cc  g4-mandatory.hh  nain4.cc  nain4.hh
abracadabra/src/: detector_construction.cc  geometries.cc  nain4.cc  primary_generator_action.cc  run_action.cc  trivial.cc
abracadabra/src/g4-mandatory/: action_initialization.cc  action_initialization.hh  detector_construction.cc  detector_construction.hh  event_action.cc  event_action.hh  primary_generator_action.cc  primary_generator_action.hh  run_action.cc  run_action.hh  sensor_hit.cc  sensor_hit.hh  stepping_action.cc  stepping_action.hh  tracking_action.cc  tracking_action.hh  trajectory.cc  trajectory.hh  trajectory_map.cc  trajectory_map.hh  trajectory_point.cc  trajectory_point.hh
abracadabra/src/geometries/: compare_scintillators.cc  compare_scintillators.hh  generate_primaries.cc  generate_primaries.hh  imas-test.cc  imas.cc  imas.hh  inspect-test.cc  inspect.cc  inspect.hh  jaszczak.cc  jaszczak.hh  nema-test.cc  nema.cc  nema.hh  samples.cc  samples.hh  sipm.cc  sipm.hh  sipm_hamamatsu_blue-test.cc  sipm_hamamatsu_blue.cc  sipm_hamamatsu_blue.hh
abracadabra/src/io/: hdf5.cc  hdf5.hh  raw_image-test.cc  raw_image.cc  raw_image.hh
abracadabra/src/materials/: LXe-test.cc  LXe.cc  LXe.hh
abracadabra/src/messengers/: abracadabra.cc  abracadabra.hh  attenuation_map.cc  attenuation_map.hh  density_map.cc  density_map.hh  generator.cc  generator.hh
abracadabra/src/random/: random-test.cc  random.cc  random.hh
abracadabra/src/utils/: enumerate-test.cc  enumerate.hh  interpolate.hh  map_set.hh  waveform-test.cc  waveform.cc  waveform.hh
abracadabra/src/writer/: hdf5_functions.cc  hdf5_functions.hh  hdf5_writer.cc  hdf5_writer.hh  persistency_manager.cc  persistency_manager.hh
abracadabra/test/: main.cc  nema-phantom-generator-test.cc  test-abracadabra.cc  test-nain4.cc  trivial-full-app-test.cc
abracadabra/test/geometries/: test-nema.cc
compositejob-template/: README.md  model.mac  run.mac
modified-examples/B1/: exampleB1.cc  vis.mac
modified-examples/B1/include/: B1DetectorConstruction.hh  B1EventAction.hh  B1PrimaryGeneratorAction.hh  B1RunAction.hh  B1SteppingAction.hh  action_initialization.hh  detector_construction.hh  event_action.hh  primary_generator_action.hh  run_action.hh  stepping_action.hh
modified-examples/B1/src/: B1ActionInitialization.cc  B1DetectorConstruction.cc  B1EventAction.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc  B1SteppingAction.cc  action_initialization.cc  detector_construction.cc  event_action.cc  primary_generator_action.cc  run_action.cc  stepping_action.cc
nix/: derivation.nix  pkgs.nix  release.nix
